tests/compile_fail/validate_on_enum.rs
use conflaguration::Validate;

#[derive(Validate)]
enum BadConfig {
    A,
}

fn main() {}
