tests/compile_fail/validate_on_enum.stderr
error: Validate can only be derived on structs
 --> tests/compile_fail/validate_on_enum.rs:4:6
  |
4 | enum BadConfig {
  |      ^^^^^^^^^
